--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 :root{
     --main-font:'Roboto',sans-serif;
     --secondary-font:'Raleway',sans-serif;
@@ -8,20 +13,69 @@
     --light-bg-cl:#F5F4FA;
 
 }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+img{
+    display: block;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+.list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.link {
+    text-decoration: none;
+    color: currentColor;
+
+}
 body {
 color: #212121;
 font-family:var(--main-font), sans-serif;
 
 }
+.container{
+width: 1200px;
+padding-left: 15px;
+padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
+
+}
+
 .page-header {
     background-color: #FFFFFF;
-    width: 1600px
+    
 }
+
 .logo-link {
+    margin-right: 94px;
     color:#000000;
     font-family: var(--secondary-font),sans-serif;
     font-size: 26px;
     line-height:1.2
+    
 }
 .logo-accent{
     color:var(--accent-color);
@@ -29,26 +83,32 @@ font-family:var(--main-font), sans-serif;
 .logo-accent-bl {
     color:#FFFFFF;
 }
+.main-nav{
+    display: flex;
+    align-items: center;
+
+}
+
 .menu-nav{
+    display: flex;
+    margin-right: auto;
     color: var(--title-text-color);
     font-size: 14px;
     font-weight: 500;
     line-height:1.14;
-    letter-spacing: 0.02em;
-}
- .list {
-    list-style: none;
-}
- .link {
-    text-decoration: none;
-    color: currentColor;
-}
+    letter-spacing: 0.02em;}
+
+
 .link mail-link,
 .link tel-link{
     color: #757575;
 }
-
+.site-nav.header-container{
+    display: flex;
+    margin-right: auto;
+}
 .site-nav{
+    margin-left: auto;
     font-weight: 500;
     font-size: 14px;
     line-height:1.14;
@@ -59,6 +119,21 @@ font-family:var(--main-font), sans-serif;
 .site-nav:focus {
     color: #2196F3;
 }
+.item-link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+.item.menu-nav{
+    margin-right: 50px;
+}
+.item.menu-nav:last-child {
+    margin-right: 0;
+}
+.item.site-nav{
+    margin-right:50px ;
+}
+
 .menu-nav.link {
 color: var(--title-text-color);
 
@@ -76,7 +151,7 @@ color: #2196F3
 }
 .hero {
     background-color: var(--dark-bg-cl);
-    width: 1600px;
+    
 }
 .hero-title{
     color: #FFFFFF;
@@ -87,7 +162,9 @@ color: #2196F3
     letter-spacing: 0.06em;
     text-align:center;
 }
-
+.section{
+    padding: 94px;
+}
 .section-title {
     color:var(--title-text-color) ;
     font-weight: 700;
@@ -95,17 +172,29 @@ color: #2196F3
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-bottom: 10px;
     
 }
-
+.section-subtitle{
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+}
+.list.box-list{
+    display: flex;
+}
 .section-text{
     color: var(--primari-text-color);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
-
 }
+  
 .section-title-name {
     font-weight: 500;
     font-size: 16px;
@@ -127,14 +216,34 @@ letter-spacing: 0.03em;
     letter-spacing: 0.06em;
 }
 .prg-text{
+
     color: var(--primari-text-color);
     font-size: 16px;
     line-height: 1.8;
     letter-spacing: 0.03em;
 }
 .section-team {
+    padding: 94px;
     background-color: #F5F4FA;
-    width: 1600px;
+    
+}
+.card-member{
+
+    background-color: #FFFFFF;
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.list.team-list{
+    display: flex;
+}
+.container.hero-container{
+    display: flex;
+   flex-direction: column;
+    align-items: center;
 }
 .main-button{
     font-family: inherit;
@@ -147,12 +256,20 @@ letter-spacing: 0.03em;
     font-size: 16px;
     line-height: 1.9;
     letter-spacing: 0.06em;
+    border-radius: 4px;
+
 }
 .main-button:hover,
 .main-button:focus{
     background-color: #188CE8;
     color: #FFFFFF;
 
+}
+.btn:last-child{
+    margin-right: 0;
+}
+.btn{
+margin-right: 8px;
 }
 .button{
     font-family: inherit;
@@ -163,7 +280,13 @@ letter-spacing: 0.03em;
     font-weight: 500;
     text-align: center;
     letter-spacing: 0.03em;
+    border-radius: 4px;
+    border-color: #F5F4FA;
+    display: inline-block;
+    padding: 6px 22px;
 }
+
+
 .button:hover, 
 .button:focus{
     background-color: #188CE8;
@@ -173,6 +296,17 @@ letter-spacing: 0.03em;
 .button {
     background-color: var(--light-bg-cl);
     cursor:pointer;
+}
+.list.features-list{
+    display: flex;
+}
+.item-list{
+    margin-right: 30px;
+    align-items: flex-end;
+    justify-content: center;
+}
+.item-list:last-child{
+    margin-right: 0;
 }
 
 .footer {
@@ -184,6 +318,7 @@ letter-spacing: 0.03em;
     font-size: 14px;
     line-height:1.7;
     letter-spacing: 0.03em;
+
 }
 .logo-link-address{
     font-family: var(--secondary-font), sans-serif;
@@ -192,6 +327,9 @@ letter-spacing: 0.03em;
     font-size: 26px;
     line-height:1.2;
     letter-spacing: 0.03em;
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 20px;
 }
 .link.email-link,
 .link.phone-link{
@@ -209,6 +347,45 @@ letter-spacing: 0.03em;
 .link.email-link:focus{
     color: var(--accent-color);
 }
+.list.button-list{
+    display: flex;
+    justify-content: center;
+    margin-top: 94px;
+    margin-bottom: 50px;
+}
 
+.flex-container-pr{
+display: flex;
+flex-wrap: wrap;
+}
+.item.flex-element{
+    align-items: center;
+    width: 370px;
+    margin-bottom: 30px;
+    margin-right: 30px;
+}
 
+.item.flex-element:nth-child(3n){
+    margin-right: 0;
+}
+.list.projects-list{
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 94px;
+}
+.list.projects-list.item{
+    width: 370px;
+    
+}
+.card-projects{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 24px;
+    padding-left: 24px;
+    width: 370px;
+    border: 1px solid #EEEEEE;
+}
+.footer-container{
+    padding-bottom: 60px;
 
+}
