--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body {
 
 .page-header {
     background-color: #FFFFFF;
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 
 }
 
@@ -185,8 +185,9 @@ body {
     text-align: center;
     margin-bottom: 30px;
 }
-.section.section-bg {
+.section-bg {
     padding-bottom: 0;
+    padding: 94px 0;
 }
 .section {
     padding: 94px 0;
@@ -241,7 +242,7 @@ body {
     color: var(--primari-text-color);
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.9;
+    line-height: 1.19;
     letter-spacing: 0.03em;
 }
 
@@ -448,5 +449,4 @@ body {
 .footer{
     padding-top:60px ;
     padding-bottom:60px ;
-    padding-left: 215px;
 }
