--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ body {
     padding-top: 200px;
     padding-bottom: 200px;
 }
+
 .hero-title {
     color: #FFFFFF;
     text-transform: uppercase;
@@ -186,8 +187,7 @@ body {
     margin-bottom: 30px;
 }
 .section-bg {
-    padding-bottom: 0;
-    padding: 94px 0;
+    padding-top: 94px;
 }
 .section {
     padding: 94px 0;
@@ -251,6 +251,7 @@ body {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
 }
 
 .prg-text {
@@ -408,20 +409,19 @@ body {
     margin-bottom: 50px;
 }
 
-.flex-container-pr {
-    display: flex;
-    flex-wrap: wrap;
-}
 
 .item.flex-element {
     align-items: center;
     width: 370px;
-    margin-bottom: 30px;
-    margin-right: 30px;
+    margin-bottom:30px;
+    margin-right:30px;
 }
 
 .item.flex-element:nth-child(3n) {
     margin-right: 0;
+}
+.item.flex-element:nth-last-child(-n+3){
+    margin-bottom: 0;
 }
 
 .list.projects-list {
